--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/react-dom": "19.0.0",
     "@types/supertest": "^6.0.3",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "3.2.3",
     "@vitest/ui": "^3.0.0",
     "babel-jest": "^29.7.0",
     "esbuild": "^0.19.2",
