feat: Add placeholder applications for CI/CD validation
- Created SalamCore (Node.js API backend)
- Created SalamPortal (React web interface)
- Created SalamWidget (Next.js embeddable component)
- Created SalamExtension (Browser extension)
- Added comprehensive header comments
- Added basic tests for validation
- Fixed TypeScript configurations

These placeholder apps allow CI/CD workflows to pass while
the actual business logic is implemented in future phases.

--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,10 @@ $RECYCLE.BIN/
 # Fichiers Docker (si nécessaire)
 # Dockerfile.local
 # docker-compose.override.yml
+
+vite.config.*.timestamp*
+vitest.config.*.timestamp*
+
+# Next.js
+.next
+out
