--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "next": "~15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "6.29.0",
@@ -43,14 +44,17 @@
     "zod": "^3.25.56"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.8.0",
+    "@next/eslint-plugin-next": "^15.2.4",
     "@nx/devkit": "21.1.2",
     "@nx/esbuild": "21.1.3",
     "@nx/eslint": "21.1.2",
-    "@nx/eslint-plugin": "21.1.2",
+    "@nx/eslint-plugin": "21.1.3",
     "@nx/jest": "21.1.2",
     "@nx/js": "21.1.3",
+    "@nx/next": "^21.1.3",
     "@nx/node": "^21.1.3",
     "@nx/playwright": "21.1.2",
     "@nx/react": "21.1.2",
@@ -62,6 +66,7 @@
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@swc/jest": "~0.2.36",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
     "@types/compression": "^1.8.1",
@@ -80,6 +85,7 @@
     "babel-jest": "^29.7.0",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
+    "eslint-config-next": "^15.2.4",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
@@ -95,6 +101,7 @@
     "nx": "21.1.2",
     "prettier": "^2.6.2",
     "supertest": "^7.1.1",
+    "swc-loader": "0.1.15",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
