test: valider le pipeline CI/CD complet
- Ajout des templates d'issues et PR standardisés
- Test du fonctionnement des notifications Slack
- Validation de l'ensemble du workflow CI/CD

--- a/apps/salamextension/tsconfig.app.json
+++ b/apps/salamextension/tsconfig.app.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "types": ["node"]
+    "types": ["node"],
+    "noEmit": false,
+    "composite": true,
+    "tsBuildInfoFile": "../../dist/.tsbuildinfo-salamextension-app"
   },
   "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts", "jest.config.ts"],
   "include": ["src/**/*.ts"]
