--- a/apps/salamcore/tsconfig.spec.json
+++ b/apps/salamcore/tsconfig.spec.json
@@ -2,8 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
-    "moduleResolution": "node10",
+    "module": "Node16",
+    "moduleResolution": "node16",
     "types": ["jest", "node"]
   },
   "include": [
