--- a/apps/salamextension/tsconfig.spec.json
+++ b/apps/salamextension/tsconfig.spec.json
@@ -3,8 +3,11 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "moduleResolution": "node10",
-    "types": ["jest", "node"]
+    "moduleResolution": "node",
+    "types": ["jest", "node"],
+    "noEmit": false,
+    "composite": true,
+    "tsBuildInfoFile": "../../dist/.tsbuildinfo-salamextension-spec"
   },
   "files": ["src/test-setup.ts"],
   "include": [
