fix(ci): correct application names in build matrix
- Replace incorrect target names with actual app names
- api -> salamcore
- widget -> salamwidget
- agent-desk -> salamportal
- chrome-extension -> salamextension

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -185,7 +185,7 @@ jobs:
     needs: setup
     strategy:
       matrix:
-        target: [api, widget, agent-desk, chrome-extension]
+        target: [salamcore, salamwidget, salamportal, salamextension]
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
