fix: Move test-setup.ts from src/ to config/ to resolve ProjectsWithNoNameError
- Created config/ directory for shared configuration files
- Moved src/test-setup.ts to config/test-setup.ts
- Removed empty src/ directory that was causing Nx to detect it as a project without name
- Updated all references in configuration files to point to new location
- This resolves the ProjectsWithNoNameError in CI/CD builds

--- a/apps/salamextension/tsconfig.spec.json
+++ b/apps/salamextension/tsconfig.spec.json
@@ -9,7 +9,7 @@
     "composite": true,
     "tsBuildInfoFile": "../../dist/.tsbuildinfo-salamextension-spec"
   },
-  "files": ["src/test-setup.ts"],
+  "files": ["../../config/test-setup.ts"],
   "include": [
     "jest.config.ts",
     "src/**/*.test.ts",
